--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prestart": "npm rebuild better-sqlite3",
     "start": "node --env-file=.env src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
